[package]
name = "iz-prober"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
description = "telegram bot that checks your servers for availability"
homepage = "https://github.com/oriontvv/iz-prober/"
repository = "https://github.com/oriontvv/iz-prober/"
documentation = "https://docs.rs/iz-prober"
keywords = ["probe", "telegram", "bot", "prober", "availability"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.41"
log = "0.4"
openssl = { version = "0.10.73", features = ["vendored"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.16", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.9.5"


[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-linux-musl{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-win{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-mac{ archive-suffix }"
